# project-12-architecture-back-end

./: .coveragerc  .env.example  .gitignore  DEMO_GUIDE.md  README.md  alembic.ini  check_db.py  pyproject.toml  pytest.ini  seed_database.py  seed_test_data.py  test_password_hash.py
.claude/: settings.local.json
config/: development.yml  production.yml  testing.yml
data/: .gitkeep
doc/: database-schema.md  document de référence.md  t004-alembic-setup.md
docs/: ARCHITECTURE_DIAGRAMS.md  AUTHENTICATION.md  CHANGELOG.md  DEMO_AUTHENTICATION.md  DEPENDENCY_INJECTION_CLI.md  DEPENDENCY_INJECTION_PATTERN.md  EXPLICATION_LIGNE_MOCK_CHAINEE.md  Exemples_commande_CRM.txt  FLUX_CREATION_CLIENT.md  IDENTIFIANTS-TEST.md  QUICK_START_AUTH.md  RESOURCES_WEB.md  SECURITY_SUMMARY.md  T008-creation-tables-migration-initiale.md  T009-seed-database-users.md  TYPER_SOUS_APPLICATIONS.md  changements-separation-noms-ajout-telephone.md  changements-timestamps-models.md  database-schema.md  explication-models.md  guide-outils-administration-sqlite.md  guide-soutenance.md
docs/oc/: DEMO_AUTHENTICATION.md  DEMO_GUIDE.md  SECURITY_SUMMARY.md  SOUTENANCE.md
migrations/: env.py
migrations/versions/: 9492cd9f1416_initial_migration_create_users_clients_.py
src/: config.py  containers.py  database.py  finders.py  sentry_config.py
src/cli/: __init__.py  business_logic.py  business_validator.py  commands.py  console.py  constants.py  dependencies.py  error_handlers.py  input_handlers.py  main.py  pagination.py  permissions.py  validators.py
src/models/: client.py  (+4 more)
tests/: conftest.py
(+56 files in other folders)
