[tool.poetry]
name = "project-12-architecture-back-end"
version = "0.1.0"
description = "Système CRM sécurisé développé en ligne de commande pour Epic Events"
authors = ["Sébastien Grison <74866413+SebGris@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.17.0"
rich = "^14.1.0"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.11.10"
sentry-sdk = "^2.40.0"
python-dotenv = "^1.1.1"
bcrypt = ">=4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
